@@ -117,6 +117,10 @@ cgal_trifacet_area.m
 
 	 CGAL_TRIFACET_AREA  Area of the facets in a triangular mesh
 	
+cgal_tri_fillholes.m
+
+	 CGAL_TRI_FILLHOLES  Fill holes in a triangular mesh, with triangles.
+	
 
 FileFormatToolbox
 -------------------------------------------------------------
@@ -278,7 +282,7 @@ scimat_blockproc3.m
 scimat_lconvhull_smoothing.m
 
 	 SCIMAT_LCONVHULL_SMOOTHING  Smoothing of a binary image using a local
-	 convex hull
+	 convex hull.
 	
 scinrrd_box.m
 
